fix(ui): prevent zoom/selection; ensure buttons respond; wire settings and theme manager; add click fallback

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         <div class="phone-frame">
             <div class="phone-header">
                 <div class="left-soft"><button id="softLeft">Menu</button></div>
-                <div class="phone-brand">Pink Phone</div>
-                <div class="right-soft"><button id="softRight">Back</button></div>
+                <div class="phone-brand">Phone</div>
+                <div class="header-controls">
+                    <button id="settingsBtn" class="settings-btn">⚙</button>
+                    <div class="right-soft"><button id="softRight">Back</button></div>
+                </div>
             </div>
 
             <div class="screen-container">
